<resources>
    <string name="app_name">SnowTrails</string>
    <string name="log_in">Log In</string>
    <string name="continue_text">Continue</string>
    <string name="snow_trails">Snow Trails</string>
    <string name="main_image_for_title_screen">main image for title screen</string>
    <string name="password_label">Password</string>
    <string name="user_name_label">User Name</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="send_me_emails_about_the_platform">Send me emails about the platform</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <!-- Variables for Pubnub and Mapbox -->
    <string name="mapbox_access_token">pk.eyJ1IjoiZHNhbmRsZXkyMCIsImEiOiJja3VvNXo4b20ycTVrMm9ydXhkczk1bWN6In0.qpZYLwJOyzYTSr9DxK1nWw</string>
    <string name="pubnub_subscribe_key">sub-c-60132bbe-2db5-11eb-ae78-c6faad964e01</string>
    <string name="pubnub_publish_key">pub-c-b14568ea-46b8-4e7d-8531-d46016512883</string>
    <string name="pubnub_uuid">SnowTrailsPubnub</string>
    <string name="please_login_before_using_chat">Please login before using chat</string>
</resources>