<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/title_screen_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_image_for_title_screen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/depositphotos_29879631_stock_photo_snowboard_in_mountains" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/go_to_app_button"
        app:layout_constraintStart_toStartOf="@+id/go_to_app_button"
        app:layout_constraintTop_toBottomOf="@+id/go_to_app_button" />

    <Button
        android:id="@+id/go_to_app_button"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginTop="464dp"
        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="@+id/snow_trails_title"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/snow_trails_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/snow_trails_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/snow_trails"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_app_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>