<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_selected_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/location_main_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:backgroundTint="@color/primary"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
            app:strokeColor="@color/accentTwo"
            app:strokeWidth="2dp"
            />

        <Button
            android:id="@+id/map_location_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/map"
            app:backgroundTint="@color/primary"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_2"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline_1"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
            app:strokeColor="@color/accentTwo"
            app:strokeWidth="2dp"/>

        <Button
            android:id="@+id/location_chat_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            app:backgroundTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline_2"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
            app:strokeColor="@color/accentTwo"
            app:strokeWidth="2dp"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/location_fragment_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/location_selected_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-5.3dp"/>







</androidx.constraintlayout.widget.ConstraintLayout>